--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
     <link rel="stylesheet" type="text/css" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
 </head>
 
-<body class="bg-t3 center">
+<body class="bg-t4 center">
     <h1 class="title-t4">2023 신년계획</h1>
-    <p class="msg">올해는 꼭 모두 지키자!</p>
+    <p class="msg-t4">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">나만의 웹서비스 만들기</div>
-        <div class="bucket img2 center">집 이사하기</div>
-        <div class="bucket img2-t5 center">매일 조금이라도 걷기</div>
+        <div class="bucket img1-t4 center">나만의 웹서비스 만들기</div>
+        <div class="bucket img2-t4 center">집 이사하기</div>
+        <div class="bucket img2-t4 center">매일 조금이라도 걷기</div>
         <div class="bucket img1-t4 center">여행가기</div>
-        <div class="bucket img1 center">오픽 따기</div>
-        <div class="bucket img2 center">추가중...</div>
+        <div class="bucket img1-t4 center">오픽 따기</div>
+        <div class="bucket img2-t4 center">추가중...</div>
     </div>
 
 
